--- a/HOMEWORK/assets/css/scss/_variables.scss
+++ b/HOMEWORK/assets/css/scss/_variables.scss
@@ -5,6 +5,8 @@ $size-text: 16px;
 $size-h3: 19.2px;
 $size-slideText: 20.8px;
 $size-icon: 24px;
+$size-sectHeaderH1: 48px;
+$size-statisticsNumber: 51.2px;
 
 //FONT-FAMILY
 $font-regular: "Nunito";
@@ -26,4 +28,4 @@ $color-gray: rgb(127, 132, 140);
 $color-lightGreen: #7ac64d;
 $color-header: #333;
 $color-footer:#242424;
-
+$color-lightgray: rgba(255, 255, 255, 0.7);
