--- a/HOMEWORK/assets/css/scss/components/_index.scss
+++ b/HOMEWORK/assets/css/scss/components/_index.scss
@@ -3,6 +3,11 @@
 @import "./job-items";
 @import "./section-header";
 @import "./social-panel";
-@import "./statistics-item";
+@import "./statistics";
 @import "./testimonials_item";
 @import "./navbar";
+@import "./button";
+@import "./overflow";
+@import "./statistics-item";
+@import "./navigation-panel";
+@import "./candidates-item";
