--- a/HOMEWORK/assets/css/scss/fonts/_font.scss
+++ b/HOMEWORK/assets/css/scss/fonts/_font.scss
@@ -1,16 +1,16 @@
 @font-face{
   font-family: 'Nunito';
-  src: url('../fonts/NunitoSans-Regular.woff');
+  src: url('../fonts/Nunito-Regular.WOFF');
   font-weight: 400;
 }
 @font-face{
   font-family: 'Nunito';
-  src: url('../fonts/NunitoSans-Bold.woff');
+  src: url('../fonts/Nunito-Bold.WOFF');
   font-weight: 700;
 }
 @font-face{
   font-family: 'Nunito';
-  src: url('../fonts/NunitoSans-Black.woff');
+  src: url('../fonts/Nunito-Black.WOFF');
   font-weight: 900;
 }
 @font-face{
