--- a/HOMEWORK/assets/css/grid.css
+++ b/HOMEWORK/assets/css/grid.css
@@ -293,6 +293,16 @@ hr {
 [role="button"] {
   cursor: pointer;
 } */
+.display-flex{
+  display:flex;
+}
+.align-items-center{
+  align-items: center;
+}
+.justify-content-center{  
+  justify-content: center;
+}
+
 .container {
   padding-right: 15px;
   padding-left: 15px;
@@ -322,7 +332,7 @@ hr {
 }
 .row {
   margin-right: -15px;
-  margin-left: -15px;
+  margin-left: -15px;  
 }
 .row-no-gutters {
   margin-right: 0;
