--- a/HOMEWORK/assets/css/scss/_parameters.scss
+++ b/HOMEWORK/assets/css/scss/_parameters.scss
@@ -19,3 +19,22 @@ a{
 .p-10{
     padding: 10px 0px; 
 }
+
+.mt-100{
+    margin-top: 100px;
+}
+.mt-50{
+    margin-top: 50px;
+}
+.mt-40{
+    margin-top: 40px;
+}
+.mt-30{
+    margin-top: 30px;
+}
+.mt-20{
+    margin-top: 20px;
+}
+.mt-10{
+    margin-top: 10px;
+}
