--- a/HOMEWORK/assets/css/scss/components/_intro-panel.scss
+++ b/HOMEWORK/assets/css/scss/components/_intro-panel.scss
@@ -1,11 +1,54 @@
 #intro{
     background-image: url("../img/back.jpg");
-    background-size: cover; 
-    // height: max-content;
-    height:500px;
-    .overflow{       
-        width:100%;
-        height: -webkit-fill-available;
-        background-color: #00000073;     
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    // position:absolute;
+    
+    
+    .container{
+        .row{
+            display:flex;
+            align-items: center;
+            height: 100vh;
+            min-height: 900px;
+            justify-content: center;
+        }
+        .section-header{
+            color: $color-white;
+            
+            .header-name{
+                font-size: $size-sectHeaderH1;
+
+            }
+            .header-contain{
+                font-size: $size-h3;
+
+            }
+        }
+        .section-contain{
+            display: flex;
+            justify-content: center;
+            form{
+                width:100%;
+                @include space-around;
+                input, select, button{
+                    width: 23%;
+                    padding: 12px 15px;
+                    border-radius: 5px;
+                    color:$color-gray;
+                }
+                button{
+                    a{
+                        &::before{
+                            content: "\e986";
+                        }
+                    }
+                   
+                }
+            }
+        }
+
     }
+    
 }
