--- a/HOMEWORK/assets/css/scss/components/_navbar.scss
+++ b/HOMEWORK/assets/css/scss/components/_navbar.scss
@@ -1,59 +1,39 @@
-.navbar{
-    @include space-around;
-    align-items: center;
-    .left{
-        a{
-            color:$color-white;
-            font-family: $font-logo;
-            font-size:$size-icon;
-            font-weight: $weight-Bold;
-        }
-    }   
-    .middle{
-        ul{
-            @include space-between;
-
-            li{
-                padding: 20px;
-                a{
-                    color:$color-gray;
-                    font-family: $font-regular;
-                    font-size:$size-text;
-                    font-weight: $weight-Normal;
-                    transition: all 0.3s;
-                    &:hover{
-                        color:$color-white;
+#navbar{
+    position: absolute;
+    z-index: 1;
+    width: 100%;
+    .navbar{
+    
+        @include space-around;
+        align-items: center;
+        .left{
+            a{
+                color:$color-white;
+                font-family: $font-logo;
+                font-size:$size-icon;
+                font-weight: $weight-Bold;
+            }
+        }   
+        .middle{
+            ul{
+                @include space-between;
+    
+                li{
+                    padding: 20px;
+                    a{
+                        color:$color-gray;
+                        font-family: $font-regular;
+                        font-size:$size-text;
+                        font-weight: $weight-Normal;
                         transition: all 0.3s;
+                        &:hover{
+                            color:$color-white;
+                            transition: all 0.3s;
+                        }
                     }
                 }
             }
         }
-    }
-    .right{
-        .contactUs{
-            padding:10px 14px;
-            background-color: $color-blue;
-            border-radius: 5px;
-            transition: ease-in 0.3s;
-            &:hover{
-                background-color: #2c5cd9;
-                transition: ease-in 0.3s;
-            }
-            a{
-                color:$color-white;
-                font-family: $font-regular;
-                        font-size:$size-text;
-                        font-weight: $weight-Normal;
-                &::before{
-                    content: "\ea95";
-                    font-family: 'icomoon';
-                    font-size:16px;
-                    color:white;
-                    margin-right:10px;
-                }
-               
-            }
-        }
- 
+    
     }
 }
